---
source: crates/stepflow-main/tests/commands/test_run.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - run
    - "--flow=nonexistent.yaml"
    - "--input-json={}"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Missing file: nonexistent.yaml
